--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     #wrap >div:nth-child(even) {background-color: #ccc;}
 
     #header{height: 100px;}
-    #visual{height: 500px;}
-    #about{height: 800px;} 
+    #visual{height: 600px;}
+    #about{height: 600px;} 
     #portfolio{height: 800px;} 
     #publishing{height: 800px;} 
     #design{height: 800px;} 
@@ -32,7 +32,7 @@
      /* quick */
      #quick{
         position: fixed;top: 100px;right: 200px;
-        width: 100px;height: 400px; background-color: #ccc;   z-index: 10;
+        width: 100px;height: 350px; background-color: #ccc;   z-index: 10;
      }
      #quick h2{font-size: 14px;line-height:40px;text-align: center;
                background-color: #fff;}
@@ -56,8 +56,8 @@
     color:#fff;font-weight:bold;border-radius: 20px;}  
    
      /*visual*/
-     .fadeShow{  width: 1200px;height: 500px;   }
-     .fadeShow img{ width: 1200px;height: 500px;position: absolute;  }
+     .fadeShow{  width: 1200px;height: 600px;   }
+     .fadeShow img{ width: 1200px;height: 600px;position: absolute;  }
      .fadeShow .active{z-index: 10;}    
        
     /* about style */
@@ -76,7 +76,7 @@
    
     #portfolio .portbox1{background-color:rgba(255,255,255,0.5);}
     #portfolio .portbox1 .tit{text-align: center;padding:50px 0;}
-    #portfolio .portbox1 img{width: 350px;margin-left:15px;
+    #portfolio .portbox1 img{width: 350px;height: 300px;;margin-left:15px;
     border-radius: 40px;box-shadow: 5px 5px 10px rgba(0,0,0,0.5);    }
     #portfolio .portbox1 .poList{width: 340px;height: 200px;
     background-color:rgba(255,255,255,0.0);margin: 0 auto;}
@@ -137,33 +137,31 @@
 <body>
     <div id="wrap">
         <div id="header">
-            <h1 class="logo"><a href="#">portfolio</a></h1>
+            <h1 class="logo"><a href="#">MYPF</a></h1>
             <ul class="gnb">
                 <li><a href="#about">about</a></li>
                 <li><a href="#portfolio">portfolio</a></li>
-                <li><a href="#publishing">publishing</a></li>
                 <li><a href="#design">design</a></li>
                 <li><a href="#works">works</a></li>
             </ul>
         </div>
         <div id="visual">
             <div class="fadeShow">
-                <img class="active" src="img_slider/sd1.png" alt="p1">
-                <img src="img_slider/sd2.png" alt="p2">
-                <img src="img_slider/sd3.png" alt="p3">
+                <img class="active" src="img/포폴-메인-2.png" alt="p1">
+                <img src="img/포폴-메인-copy.png" alt="p2">
             </div>
         </div>
         <div id="about"><h2>about</h2>
 
             <div class="abox">
 
-              <img src="img_slider/face.png" width="300" alt="나의사진">
+              <img src="img/photo.png" width="300" alt="나의사진">
 
               <br>
 
               <h3>디자인과 퍼블리싱코딩도 꼼꼼하게 <br>잘표현하는
 
-                 신입 웹디자이너 홍길동입니다.</h3>
+                 신입 웹디자이너 김미연입니다.</h3>
 
              <p>언제나 사용자의 입장을 고려하여 디자인하는 
 
@@ -173,7 +171,7 @@
 
                      경험을 통해 사용자에게 편리한 UI/UX를 제공하는
 
-                웹디자인과 퍼블리싱이 가능한 프론트앤드개발이 저의 목표입니다. 웹/앱디자인,
+                웹디자인과 퍼블리싱이 저의 목표입니다. 웹/앱디자인,
 
                        퍼블리싱, 상세페이지, 배너, HTML수정,
 
@@ -187,13 +185,13 @@
 
                  <ul>
 
-                    <li><b>이 름 :</b> 홍길동</li>
+                    <li><b>이 름 :</b> 김미연</li>
 
-                    <li><b>연락처 :</b> 010-9876-8**** </li>
+                    <li><b>연락처 :</b> 010-7182-9048 </li>
 
-                    <li><b>mail :</b> admin@naver.com </li>
+                    <li><b>mail :</b> miyeon927@naver.com </li>
 
-                    <li><b>취미 :</b> 야구,독서,등산 </li>
+                    <li><b>취미 :</b> 산책,독서,피아노 </li>
 
                  </ul>
 
@@ -201,7 +199,7 @@
 
                  <ul>
 
-                    <li>html (95%)</li>
+                    <li>html(95%)</li>
 
                     <li>css(95%)</li>
 
@@ -209,11 +207,11 @@
 
                     <li>bootstrap(70%)</li>
 
-                    <li>photoshop(90%)</li>
+                    <li>photoshop(95%)</li>
 
-                    <li>figma(80%)</li>
+                    <li>figma(95%)</li>
 
-                    <li>responsiveweb(80%)</li>
+                    <li>illustrate(85%)</li>
 
                  </ul>
 
@@ -224,19 +222,19 @@
             <h2>portfolio</h2>
             <div class="portbox1">
 
-                <h2 class="tit">DSN웹사이트</h2>
+                <h2 class="tit">lesnsgogo 모바일 사이트</h2>
 
-                <img src="img_slider/main1.jpg" alt="main1">
+                <img src="img_slider/mobi1.jpg" alt="main1">
 
                 <br>
 
                 <ul class="poList">
 
-                 <li><b>사이트명 </b>  DSN사이트(데스크탑)</li>
+                 <li><b>사이트명 </b>  lesnsgogo(모바일)</li>
 
-                 <li><b>제작기간 </b>  2일 (기획/디자인/코딩)</li>
+                 <li><b>제작기간 </b>  3일 (기획/디자인/코딩)</li>
 
-                 <li><b>제 작 물</b> 데스크탑 메인</li>
+                 <li><b>제 작 물</b> 모바일 상세 페이지</li>
 
                  <li><b>컨    셉</b> 깔끔한, 세련된, 고급스러운</li>
 
@@ -248,26 +246,26 @@
 
                   <button>기획서</button>
 
-                  <button>웹사이트</button>
+                  <a href="lesnsgogo/index.html"><button>웹사이트</button></a>
 
                 </div>
 
              </div><!-- portbox1 end -->
              <div class="portbox1">
 
-                <h2 class="tit">DSN웹사이트</h2>
+                <h2 class="tit">converse</h2>
 
-                <img src="img_slider/main1.jpg" alt="main1">
+                <img src="img_slider/mw1.jpg" alt="main1">
 
                 <br>
 
                 <ul class="poList">
 
-                 <li><b>사이트명 </b>  DSN사이트(데스크탑)</li>
+                 <li><b>사이트명 </b>  converse(반응형)</li>
 
                  <li><b>제작기간 </b>  2일 (기획/디자인/코딩)</li>
 
-                 <li><b>제 작 물</b> 데스크탑 메인</li>
+                 <li><b>제 작 물</b> 모바일, 데스크탑 메인</li>
 
                  <li><b>컨    셉</b> 깔끔한, 세련된, 고급스러운</li>
 
@@ -279,30 +277,30 @@
 
                   <button>기획서</button>
 
-                  <button>웹사이트</button>
+                  <a href="converse/index.html"><button>웹사이트</button></a>
 
                 </div>
 
              </div><!-- portbox1 end -->
              <div class="portbox1">
 
-                <h2 class="tit">DSN웹사이트</h2>
+                <h2 class="tit">stavia 웹사이트</h2>
 
-                <img src="img_slider/main1.jpg" alt="main1">
+                <img src="img_slider/web1.jpg" alt="main1">
 
                 <br>
 
                 <ul class="poList">
 
-                 <li><b>사이트명 </b>  DSN사이트(데스크탑)</li>
+                 <li><b>사이트명 </b>  stavia(데스크탑)</li>
 
-                 <li><b>제작기간 </b>  2일 (기획/디자인/코딩)</li>
+                 <li><b>제작기간 </b>  1일 (기획/디자인)</li>
 
                  <li><b>제 작 물</b> 데스크탑 메인</li>
 
                  <li><b>컨    셉</b> 깔끔한, 세련된, 고급스러운</li>
 
-                 <li><b>컬    러</b> gray, blue </li>
+                 <li><b>컬    러</b> brown, blue </li>
 
                 </ul>
 
@@ -310,13 +308,13 @@
 
                   <button>기획서</button>
 
-                  <button>웹사이트</button>
+                  <a href="stavia/index.html"><button>웹사이트</button></a>
 
                 </div>
 
              </div><!-- portbox1 end -->
         </div>
-        <div id="publishing">
+        <!-- <div id="publishing">
             <h2>publishing</h2>
             <ul class="pubbox1">
                 <li><h3>pub1</h3>
@@ -330,33 +328,33 @@
                 <li><h3>pub4</h3><img  class="imgbox" src="img_slider/main1.jpg" width="400" alt="m1">
                     <p>desktop coding</p></li>
             </ul>
-        </div>
+        </div> -->
 
         <div id="design">
             <h2>design</h2>
         <ul class="desbox1">
         <li>
-            <img src="img/bc1.jpg" alt="Product1">
+            <img src="img/포폴-엽떡.png" alt="Product1">
             <div>배경사진 : <em>바이올렛</em></div>
         </li>
         <li>
-            <img src="img/bc2.jpg" alt="Product2">
+            <img src="img/포폴-썬그림-1.png" alt="Product2">
             <div>배경사진 : <em>파랑</em></div>
         </li>
         <li>
-            <img src="img/bc3.jpg" alt="Product3">
+            <img src="img/포폴-시계광고-1.png" alt="Product3">
             <div>배경사진 : <em>분홍</em></div>
         </li>
         <li>
-            <img src="img/bc4.jpg" alt="Product4">
+            <img src="img/포폴-시즌광고-1.png" alt="Product4">
             <div>배경사진 : <em>파스텔</em></div>
         </li>
         <li>
-            <img src="img/bc5.jpg" alt="Product5">
+            <img src="img/포폴-의류.png" alt="Product5">
             <div>배경사진 : <em>그린</em></div>
         </li>
         <li>
-            <img src="img/bc6.jpg" alt="Product6">
+            <img src="img/쿠폰2.png" alt="Product6">
             <div>배경사진 : <em>청록</em></div>
         </li>
     </ul>
@@ -366,42 +364,42 @@
             <h2>works</h2>
             <ul class="worbox1">
                 <li>
-                    <img src="img/bc1.jpg" alt="Product1">
+                    <img src="img/포폴-관광포스터.png" alt="Product1">
                     <div>배경사진 : <em>바이올렛</em></div>
                 </li>
                 <li>
-                    <img src="img/bc2.jpg" alt="Product2">
+                    <img src="img/포폴-딸기라떼-신제품-광고.png" alt="Product2">
                     <div>배경사진 : <em>파랑</em></div>
                 </li>
                 <li>
-                    <img src="img/bc3.jpg" alt="Product3">
+                    <img src="img/포폴물.png" alt="Product3">
                     <div>배경사진 : <em>분홍</em></div>
                 </li>
                 <li>
-                    <img src="img/bc4.jpg" alt="Product4">
+                    <img src="img/포폴-에너지드링크-미완.png" alt="Product4">
                     <div>배경사진 : <em>파스텔</em></div>
                 </li>
                 <li>
-                    <img src="img/bc5.jpg" alt="Product5">
+                    <img src="img/포폴-앱.png" alt="Product5">
                     <div>배경사진 : <em>그린</em></div>
                 </li>
                 <li>
-                    <img src="img/bc6.jpg" alt="Product6">
+                    <img src="img/포폴-여름세일.png" alt="Product6">
                     <div>배경사진 : <em>청록</em></div>
                 </li>
                 <li>
-                    <img src="img/bc5.jpg" alt="Product5">
+                    <img src="img/포폴-포스터.png" alt="Product5">
                     <div>배경사진 : <em>그린</em></div>
                 </li>
                 <li>
-                    <img src="img/bc6.jpg" alt="Product6">
+                    <img src="img/포폴-햄.png" alt="Product6">
                     <div>배경사진 : <em>청록</em></div>
                 </li>
             </ul>
         </div>
 
         <div id="footer">
-         <p class="f_copy">copyright 2025 ID.dothome.co.kr</p>
+         <p class="f_copy">copyright 2025 mysite92.dothome.co.kr</p>
         </div>
     </div>
     <div id="quick">
@@ -410,7 +408,6 @@
        <ul class="qmenu">
         <li><a href="#about">about</a></li>
         <li><a href="#portfolio">portfolio</a></li>
-        <li><a href="#publishing">publishing</a></li>
         <li><a href="#design">design</a></li>
         <li><a href="#works">works</a></li>
     </ul>
