--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
                     <li>figma(95%)</li>
 
-                    <li>illustrate(85%)</li>
+                    <li>illustrator(85%)</li>
 
                  </ul>
 
