--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 
                 <div class="linkBtn">
 
-                  <a href="lesnsgogo/모바일 기획서_김미연.pdf"><button>기획서</button></a>
+                  <a href="lesnsgogo/mobi_mky.pdf"><button>기획서</button></a>
 
                   <a href="lesnsgogo/index.html"><button>웹사이트</button></a>
 
